--- a/main.html
+++ b/main.html
@@ -1,18 +1,17 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Home</title>
+	<title>Spam Alert - Team Arishti</title>
 	<!-- <link rel="stylesheet" type="text/css" href="../static/css/styles.css"> -->
-	<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/styles.css') }}">
+	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-
-	<header>
+  <header>
 		<div class="container">
 		<div id="brandname">
 			Machine Learning App with Flask
 		</div>
-		<h2>Spam Detector For SMS Messages</h2>
+		<h2>Spam Alert - Team Arishti</h2>
 		
 	</div>
 	</header>
@@ -22,17 +21,12 @@
 		<form action="{{ url_for('predict')}}" method="POST">
 		<p>Enter Your Message Here</p>
 		<!-- <input type="text" name="comment"/> -->
-		<textarea name="message" rows="4" cols="50"></textarea>
+		<textarea name="message" rows="4" cols="50" ></textarea>
 		<br/>
 
-		<input type="submit" class="btn-info" value="predict">
+		<input type="submit" class="btn-info" value="Predict">
+    </div>
 		
 	</form>
-		
-	</div>
-
-	
-	
-
 </body>
 </html>
