--- a/result.html
+++ b/result.html
@@ -1,32 +1,39 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-	<title></title>
+    <title></title>
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/styles.css') }}">
 </head>
+
 <body>
+<style>
+body {
+  background-image: url('sus.jpg');
+}
+</style>
+    <header>
+        <div class="container">
+            <div id="brandname">
+                ML App
+            </div>
+            <h2>Spam Detector For SMS Messages</h2>
 
-	<header>
-		<div class="container">
-		<div id="brandname">
-			ML App
-		</div>
-		<h2>Spam Detector For SMS Messages</h2>
-		
-	</div>
-	</header>
-	<p style="color:blue;font-size:20;text-align: center;"><b>Results for Comment</b></p>
-	<div class="results">
+        </div>
+    </header>
+    <p style="color:blue;font-size:20;text-align: center;"><b>Results for Comment</b></p>
+    <div class="results">
 
 
-		
-	{% if prediction == 1%}
-	<h2 style="color:red;">Spam</h2>
-	{% elif prediction == 0%}
-	<h2 style="color:blue;">Not a Spam (It is a Ham)</h2>
-	{% endif %}
 
-	</div>
+        {% if prediction == 1%}
+        <h2 style="color:red;">Spam</h2>
+        {% elif prediction == 0%}
+        <h2 style="color:blue;">Not a Spam (It is a Ham)</h2>
+        {% endif %}
+
+    </div>
 
 </body>
+
 </html>
