--- a/result.html
+++ b/result.html
@@ -1,39 +1,33 @@
 <!DOCTYPE html>
 <html>
-
 <head>
-    <title></title>
-    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/styles.css') }}">
+	<meta charset="utf-8">
+	<title>Spam OR Ham</title>
+    <link rel="stylesheet" type="text/css" href="{{url_for('static', filename = 'style.css')}}" media="screen">
 </head>
-
 <body>
-<style>
-body {
-  background-image: url('spam.jpg');
-}
-</style>
-    <header>
-        <div class="container">
-            <div id="brandname">
-                ML App
-            </div>
-            <h2>Spam Detector For SMS Messages</h2>
 
-        </div>
-    </header>
-    <p style="color:blue;font-size:20;text-align: center;"><b>Results for Comment</b></p>
-    <div class="results">
+	<header>
+		<div class="container">
+		<div id="brandname">
+			Spam or Not!
+		</div>
+		<h2>Spam Detector For SMS Messages</h2>
+		
+	</div>
+	</header>
+	<p style="color:blue;font-size:20;text-align:center;"><b>Results for Comment</b></p>
+	<div class="results">
 
 
+		
+	{% if prediction == 1%}
+	<h2 style="color:red;">Spam</h2>
+	{% elif prediction == 0%}
+	<h2 style="color:blue;">Not a Spam (It is a Ham)</h2>
+	{% endif %}
 
-        {% if prediction == 1%}
-        <h2 style="color:red;">Spam</h2>
-        {% elif prediction == 0%}
-        <h2 style="color:blue;">Not a Spam (It is a Ham)</h2>
-        {% endif %}
-
-    </div>
+	</div>
 
 </body>
-
 </html>
